# ethny26

./: .gitignore  CANTON-RWA.md  CHAINLINK.md  DEX.md  IMPLEMENTATION-PLAN.md  LICENSE  PLAN.md  README.md  STATUS.md  multi-package.yaml
.claude/: settings.local.json
backend/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  world-state.json  world-state.json.bak
backend/src/: bootstrap.ts  config.ts  e2e.ts  fetchPrice.ts  gateway.ts  keeper.ts  liveChainlink.ts  pruneRights.ts  smoke.ts  tradeSpike.ts  types.ts  uploadDar.ts  walletSpike.ts
backend/src/ledger/: auth.ts  cantonLedger.ts  mockLedger.ts
backend/src/loop/: triggerLoop.ts
backend/src/oracle/: dataStreams.ts  fromEnv.ts  hmac.ts  priceSource.ts  reportV3.ts  wsPriceSource.ts
backend/src/risk/: math.ts
backend/test/: auth.test.ts  cantonLedger.test.ts  loop.test.ts  oracle.test.ts  risk.test.ts
daml/: daml.yaml
daml-tests/: daml.yaml
daml-tests/daml/Setup/: Bootstrap.daml
daml-tests/daml/Tests/: Lifecycle.daml  Privacy.daml
daml/daml/PerpDex/: Core.daml  Oracle.daml  RWA.daml  Types.daml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: ChartPanel.tsx  CollateralCard.tsx  ConnectScreen.tsx  Feeds.tsx  IdentityStrip.tsx  MarketTabs.tsx  NyxMark.tsx  OrderForm.tsx  PositionsPanel.tsx  PriceChart.tsx  Redaction.tsx  TopBar.tsx  TraderActivity.tsx  VenuePanel.tsx  WalletPanel.tsx
frontend/src/data/: api.ts  liveBackend.ts  mockEngine.ts  wallet.ts
frontend/src/domain/: config.ts  risk.ts  types.ts
frontend/src/lib/: format.ts  hooks.ts
frontend/src/store/: store.tsx
frontend/src/styles/: components.css  global.css  theme.css
matching-engine/: .env.example  CMakeLists.txt  jest.config.js  package.json  tsconfig.json
matching-engine/src/: engine.cpp  engine.hpp  ledger.cpp  ledger.hpp  main.cpp  orderbook.cpp  orderbook.hpp  recovery.cpp  recovery.hpp  types.hpp
matching-engine/tests/: test_engine.cpp  test_orderbook.cpp
(+2 files in other folders)
